@@ -1,6 +1,9 @@
 Changes since version 1.1.1
 ---------------------------
 
+- Manual retry in the exception() callback of asynchronous requests
+  didn't work. This has been fixed.
+
 - Fixed a crash that could happen during shutdown.
 
 - Fixed a deadlock that could happen during connection establishment.
